# trading-agents

./: .gitignore
tradingagents_crypto/: .ruff.toml  AGENTS.md  README.md  STATUS.md  pyproject.toml  requirements.txt
tradingagents_crypto/.github/workflows/: ci.yml
tradingagents_crypto/agents/: __init__.py  base.py  factory.py  registry.py  schema.py
tradingagents_crypto/agents/analysts/: __init__.py  hyperliquid_perp_analyst.py  (+1 more)
tradingagents_crypto/alerts/: __init__.py  rules.py  webhook.py
tradingagents_crypto/api/: health.py
tradingagents_crypto/backtest/: __init__.py  backtest_engine.py  funding_simulator.py  reporting.py  slippage_estimator.py
tradingagents_crypto/config/: __init__.py  default_config.py
tradingagents_crypto/dataflows/: bybit.py  coincap.py
tradingagents_crypto/docker/: .dockerignore  Dockerfile  docker-compose.yml  prometheus.yml
tradingagents_crypto/docs/: phase2_data_sources.md  sdk_findings.md
tradingagents_crypto/graph/: crypto_trading_graph.py  multi_chain_router.py
tradingagents_crypto/indicators/: __init__.py  aggregator.py  calculator.py  crypto_metrics.py
tradingagents_crypto/memory/: __init__.py  shared_state.py
tradingagents_crypto/phase1/: README.md
tradingagents_crypto/phase2/: README.md
tradingagents_crypto/plans/: README.md  phase-1-hyperliquid.md  phase-2-multi-chain.md  phase-3-risk-backtest.md
tradingagents_crypto/scripts/: test_hl_connection.py
tradingagents_crypto/tasks/: PROGRESS.md
tradingagents_crypto/tests/: conftest.py
tradingagents_crypto/utils/: __init__.py  logging.py  metrics.py
(+160 files in other folders)
