[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents-crypto"
version = "0.1.0"
description = "Multi-agent crypto trading system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "prometheus-client>=0.19.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.20",
    "tenacity>=8.0.0",
    "ta>=0.10.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tradingagents_crypto*"]
